[package]
name = "record"
version = "0.1.0"
edition = "2021"

[dependencies]
binance = "0.21.0"
chrono = "0.4.39"
serde = "1.0.216"
serde_json = "1.0.134"
tokio = {version = "1.42.0", features = ["full"] }
datatypes = { path = "../datatypes" }
futures = "0.3.31"
indicatif = "0.17.9"
crossfire = "1.0.1"
